fixed cache system